@@ -61,6 +61,7 @@
 	  incoming connection
 	* added more detailed instrumentation of the disk I/O thread
 
+	* fixed python bindings for tcp::endpoint
 	* fixed edge case of pad file support
 	* limit number of torrents tracked by DHT
 	* fixed bug when allow_multiple_connections_per_ip was enabled
